hphp/test/zend/good/ext/gd/tests/gd_info_basic.php.skipif
<?php 
	if (!function_exists('gd_info')) {
		die('skip gd_info() not available');
	}
?>