hphp/test/zend/bad/ext/standard/tests/misc/time_sleep_until_basic.php.skipif
<?php
if (getenv("SKIP_SLOW_TESTS")) die("skip slow test");
if (!function_exists("time_sleep_until")) die('skip time_sleep_until() not available');
?>